--- a/TimeUtil.BlazorWasmClient/App.razor
+++ b/TimeUtil.BlazorWasmClient/App.razor
@@ -1,12 +1,5 @@
-﻿<Router AppAssembly="@typeof(App).Assembly" AdditionalAssemblies="new[]{typeof(MainLayout).Assembly}">
-    <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
-    </Found>
-    <NotFound>
-        <PageTitle>Not found</PageTitle>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
-        </LayoutView>
-    </NotFound>
-</Router>
+﻿@using TimeUtil.Components.Pages
+
+<LayoutView Layout="@typeof(MainLayout)">
+    <Index />
+</LayoutView>
