moved event table components to feature folder

--- a/TimeUtil.components/EventsTable/DataOutputView.razor
+++ b/TimeUtil.components/EventsTable/DataOutputView.razor
@@ -12,7 +12,7 @@
             <MonthRangePicker StartDate="@Calendar.FirstEventDate" EndDate="@Calendar.LastEventDate" @bind-MonthRange="@MonthRange" />
         </MudStack>
         <div class="mt-1">
-            <SimpleEventsTable Events="events" />
+            <EventsTable Events="events" />
         </div>
     </MudStack>
 </MudPaper>
