--- a/TimeUtil.components/Pages/Index.razor
+++ b/TimeUtil.components/Pages/Index.razor
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Forms
+@using TimeUtil.Components.EventsTable
 @using TimeUtil.Shared
 @using TimeUtil.Shared.Interfaces
 @using TimeUtil.Components.TimeUntilCalculator
