--- a/TimeUtil.components/_Imports.razor
+++ b/TimeUtil.components/_Imports.razor
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using MudBlazor
 @using TimeUtil.Components.Shared
-@using TimeUtil.Components.Shared.DataOutput
+@using TimeUtil.Components.EventsTable
 @using TimeUtil.Components.Types
