--- a/TimeUtil.components/Pages/Index.razor
+++ b/TimeUtil.components/Pages/Index.razor
@@ -17,7 +17,7 @@
             }
             else
             {
-                <MudText Typo="Typo.subtitle1">
+                <StyledText HtmlTag="p" Typo="Typo.subtitle1">
                     File: <strong>@_file!.Name</strong> is currently being displayed
                     <MudButton Variant="Variant.Filled"
                            Color="Color.Info"
@@ -27,7 +27,7 @@
                            OnClick="Reset">
                         Reset
                     </MudButton>
-                </MudText>
+                </StyledText>
             }
         </MudPaper>
     </MudItem>
