--- a/TimeUtil.components/Shared/MainLayout.razor
+++ b/TimeUtil.components/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
 
 <MudLayout>
     <MudAppBar Elevation="1">
-        <MudText Typo="Typo.h5" Class="ml-3">Time Until</MudText>
+        <StyledText Typo="Typo.h5" Class="ml-3">Time Until</StyledText>
     </MudAppBar>
     <MudMainContent>
         <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-5">
