--- a/TimeUtil.components/Pages/Index.razor
+++ b/TimeUtil.components/Pages/Index.razor
@@ -7,6 +7,8 @@
 @inject ISnackbar Snackbar
 @inject IOutlookCalendarCSVParseService Parser
 
+@implements IDisposable
+
 <PageTitle>Time Utilisation</PageTitle>
 <MudGrid>
     <MudItem xs="12">
@@ -66,6 +68,7 @@
                 await using Stream stream = input.File.OpenReadStream(input.File.Size);
                 using StreamContent streamContent = new(stream);
                 cal = await Parser.ParseOutlookCalendar(await streamContent.ReadAsStreamAsync());
+                cal.OnUpdated += OnCalendarUpdated;
             }
             catch (Exception e)
             {
@@ -81,9 +84,29 @@
         }
     }
 
+    private void OnCalendarUpdated()
+    {
+        _ = InvokeAsync(StateHasChanged); 
+    }
+
     private void Reset()
     {
-        cal = null;
+        CleanCalendar();
         _file = null;
+    }
+
+    private void CleanCalendar()
+    {
+        if (cal is not null)
+        {
+            cal.OnUpdated -= OnCalendarUpdated;
+            cal.Dispose();
+            cal = null;
+        }
+    }
+
+    public void Dispose()
+    {
+        CleanCalendar();
     }
 }
