--- a/TimeUtil.components/EventsTable/EventsTable.razor
+++ b/TimeUtil.components/EventsTable/EventsTable.razor
@@ -1,5 +1,7 @@
 ﻿@using TimeUtil.Shared
 
+@inject IDialogService DialogService
+
 <MudSimpleTable Hover="true" Striped="true" Dense="true" Elevation="0" Outlined="true">
     <thead>
         <tr>
@@ -18,6 +20,7 @@
             <th>
                 Event Categories
             </th>
+            <th aria-hidden="true"></th>
         </tr>
     </thead>
     <tbody>
@@ -46,6 +49,9 @@
                         }
                     </ul>
                 </td>
+                <td>
+                    <MudIconButton Icon="@Icons.Filled.Edit" aria-label="edit" Size="@Size.Small" OnClick="() => OpenEditDialog(row)" />
+                </td>
             </tr>
         }
     </tbody>
@@ -65,9 +71,11 @@
 
 @code {
     [Parameter, EditorRequired] public EventsTableData Events { get; set; } = default!;
+    [Parameter, EditorRequired] public IEnumerable<string> Categories { get; set; } = default!;
 
     private Event[] _events = default!;
     private static readonly int[] pageSizeOptions = new[] { 20, 40, 60, 80, 100 };
+    private static readonly DialogOptions dialogOptions = new() { MaxWidth = MaxWidth.Medium, FullWidth = true, DisableBackdropClick = true };
     private int _pageSize = pageSizeOptions[0];
     private int _numberOfPages;
 
@@ -108,5 +116,24 @@
     private Event[] GetPageOfEvents()
     {
         return Events.Events.Skip((_currentPage - 1) * _pageSize).Take(_pageSize).ToArray();
+    }
+
+    private async Task OpenEditDialog(Event eventToUpdate)
+    {
+
+        DialogParameters parameters = new()
+        {
+            { nameof(EditEventDialog.Event), eventToUpdate },
+            { nameof(EditEventDialog.Categories), Categories }
+        };
+
+        var reference = DialogService.Show<EditEventDialog>("Simple Dialog", parameters, dialogOptions);
+
+        var res = await reference.Result;
+
+        if (res.TryGetSuccessfulResult(out IEnumerable<string>? categories))
+        {
+            eventToUpdate.UpdateEvent(categories.ToArray());
+        }
     }
 }
