--- a/TimeUtil.components/_Imports.razor
+++ b/TimeUtil.components/_Imports.razor
@@ -3,3 +3,4 @@
 @using TimeUtil.Components.Shared
 @using TimeUtil.Components.EventsTable
 @using TimeUtil.Components.Types
+@using TimeUtil.Components.Extensions;
