added dark mode and fixed spelling

--- a/TimeUtil.components/Shared/MainLayout.razor
+++ b/TimeUtil.components/Shared/MainLayout.razor
@@ -1,12 +1,14 @@
 ﻿@inherits LayoutComponentBase
 
-<MudThemeProvider />
+<MudThemeProvider @bind-IsDarkMode="@darkMode" />
 <MudDialogProvider />
 <MudSnackbarProvider />
 
 <MudLayout>
     <MudAppBar Elevation="1">
-        <StyledText Typo="Typo.h5" Class="ml-3">Time Until</StyledText>
+        <StyledText Typo="Typo.h5" Class="ml-3">Time Utilisation</StyledText>
+        <MudSpacer />
+        <MudIconButton Icon="@ButtonIcon" OnClick="ToggleDarkMode" aria-label="toggle Dark Mode" Size="Size.Large" Color="Color.Inherit" />
     </MudAppBar>
     <MudMainContent>
         <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-5">
@@ -25,6 +27,14 @@
 
 @code {
     private ErrorBoundary? errorBoundary;
+    private bool darkMode = false;
+
+    private string ButtonIcon => darkMode ? Icons.Outlined.LightMode : Icons.Outlined.DarkMode;
+
+    private void ToggleDarkMode()
+    {
+        darkMode = !darkMode;
+    }
 
     private void Reset()
     {
